visiba-park/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}
.Home {
  display: flex;
  flex-direction: column;
}
.logoTitle {
  display: flex;
}
.homeTitle {
  padding-top: 25px;
  padding-left: 20px;
}
.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

.loginbutton {
  display: flex;
  align-self: center;
}

.slacklogo {
  display: flex;
  height: 1.5em;
  padding-left: 12px;
  align-self: center;
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
.singnInHome {
  display: flex;
  height: 4rem;
  width: 10rem;
  margin-left: 650px;
  position: absolute;
  margin-top: 80px;
}

.signInButton {
  display: flex;
  background-image: linear-gradient(#242424);
  border-radius: 8px;
  border-style: ridge;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  flex-shrink: 0;
  font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: 24px;
  font-weight: 500;
  height: 4rem;
  text-align: center;
  text-shadow: rgba(39, 71, 26, 0.25) 0 3px 8px;
  transition: all 0.5s;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.buttonBook {
  display: flex;
  margin-left: 280px;
  margin-top: 20px;
  justify-content: space-around;
  border-radius: 8px;
  border-style: ridge;
  box-sizing: border-box;
  width: 15rem;
  color: #ffffff;
  cursor: pointer;
  flex-shrink: 0;
  font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: 24px;
  font-weight: 500;
  height: 4rem;
  text-align: center;
  text-shadow: rgba(39, 71, 26, 0.25) 0 3px 8px;
  transition: all 0.5s;
  touch-action: manipulation;
}

.signIn {
  display: flex;
  flex-direction: column;
}

.signIn-button {
  display: flex;
  background-image: linear-gradient(
    92.88deg,
    #12811a 9.16%,
    #267013 43.89%,
    #135e00 64.72%
  );
  border-radius: 8px;
  border-style: none;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  flex-shrink: 0;
  font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: 24px;
  font-weight: 500;
  height: 4rem;
  text-align: center;
  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
  transition: all 0.5s;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.signIn-button:hover {
  box-shadow: rgba(38, 194, 18, 0.5) 0 1px 30px;
  transition-duration: 0.1s;
}

@media (min-width: 768px) {
  .signIn-button {
    padding: 0 2.6rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.signIn-button2 {
  display: flex;
  background-image: linear-gradient(
    92.88deg,
    #4b1281 9.16%,
    #4c1370 43.89%,
    #42005e 64.72%
  );
  border-radius: 8px;
  border-style: none;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  flex-shrink: 0;
  font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: 24px;
  font-weight: 500;
  height: 4rem;
  text-align: center;
  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
  transition: all 0.5s;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  margin-top: 20px;
}

.signIn-button2:hover {
  box-shadow: rgba(115, 18, 194, 0.5) 0 1px 30px;
  transition-duration: 0.1s;
}

@media (min-width: 768px) {
  .signIn-button2 {
    padding: 0 2.6rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.styleCalendar {
  display: flex;
  align-self: center;
  flex-direction: column;
}

.read-the-docs {
  color: #888;
}

.react-calendar {
  width: 800px;
  max-width: 100%;
  height: 350px;
  background-color: #242424;
  color: #222;
  border-radius: 8px;
  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.125em;
}

.react-calendar__navigation button {
  color: #ffffff;
  min-width: 44px;
  background: none;
  font-size: 20px;
  margin-top: 8px;
}

.react-calendar__navigation button:enabled:hover,
.react-calendar__navigation button:enabled:focus {
  background-color: #242424;
}
.react-calendar__navigation button[disabled] {
  background-color: #242424;
}
abbr[title] {
  text-decoration: none;
}

/* .react-calendar__month-view__days__day--weekend {
  color: #d10000;
 } */

.react-calendar__tile:enabled:hover,
.react-calendar__tile:enabled:focus {
  background: #645d5db3;
  color: #ffffff;
  border-radius: 6px;
}

.react-calendar__tile--now {
  background: #d4a71333;
  border-radius: 6px;
  font-weight: bold;
  color: #5049bb;
}

.react-calendar__tile--now:enabled:hover,
.react-calendar__tile--now:enabled:focus {
  background: #d4a71333;
  border-radius: 6px;
  font-weight: bold;
  color: #ffffff;
}

.react-calendar__tile--hasActive:enabled:hover,
.react-calendar__tile--hasActive:enabled:focus {
  background: #ffffff4f;
}

.react-calendar__tile--active {
  background: #4d13d4;
  border-radius: 6px;
  font-weight: bold;
  color: rgb(255, 255, 255);
}

.react-calendar__tile--active:enabled:hover,
.react-calendar__tile--active:enabled:focus {
  background: #4d13d4;
  color: white;
}

.react-calendar__tile:disabled {
  background-color: #242424;
}

